# daily-dashboard

./: .gitignore  Cargo.toml  Makefile  README.md  config.example.yml
completions/: daily-dashboard.fish
src/: event.rs  main.rs  tabstate.rs  utils.rs
