[package]
name = "daily-dashboard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
tui = "0.15.0"
serde = { version = "1.0", features = ["derive"]  }
serde_yaml = "0.8.21"
clap = "2.33.3"
dirs = "1.0.4"
